--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon_v2.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.png?v=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NomNomLog</title>
   </head>
